updated mobile view on about.html
updated mobile view of footer

--- a/app/about.html
+++ b/app/about.html
@@ -39,8 +39,7 @@
       <div class="row home-body">
         <div class="small-6 columns">
           <div class="slideshow-wrapper">
-            <div class="preloader"></div>
-            <ul data-orbit="" class="slideshow-border">
+            <ul data-orbit>
               <li>
                 <img src="img/rickseven.jpg" alt="Kaplan in the studio">
                 <div class="orbit-caption orbit-style">
@@ -119,10 +118,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="small-3 columns">
+        <div class="large-3 small-12 columns">
             <h3 class="title-pad">awards &amp; recognition</h3> 
         </div>
-        <div class="small-9 columns border-break">
+        <div class="large-9 small-12 columns border-break">
           <p class="award-text">Kaplan has received numerous awards for his work over the years, including:</p>
             <div class="small-4 columns">
               <ul class="awards-list">
@@ -146,8 +145,8 @@
               </ul>
             </div> 
           <p class="award-text slanted">and a Bronze Medallion from the Professional Society of Journalists, Sigma Delta Chi.</p>
+        </div>
       </div>
-    </div>
       <div class="row">
         <div class="small-12 columns line-seperator">
         </div>
@@ -167,36 +166,36 @@
         </div>
       </div>
       <div class="row">
-        <div class="small-2 columns">
+        <div class="large-2 small-4 columns">
           <div id="about-hbo">
             <h4>hbo<br> &amp;<br> fuse
             </h4>
           </div>
         </div>
-        <div class="small-6 columns">
+        <div class="large-6 small-8 columns">
           <div class="break-left">
             <p class="home-info pad-l">KMP’s first client was Aaron Sorkin and the HBO program 
             <strong>THE NEWSROOM</strong>, where Kaplan was hired to be a Creative Consultant beginning with Season Two. Writing began in September of 2012. In February of 2013 Kaplan was employed to consult and co-produce a historic documentary of former President George Bush - <strong>“41 on 41"</strong>- for the Bush Library and family. In April of 2013 Kaplan was given the job of overseeing all live productions on shows at <strong>THE FUSE NETWORK</strong>. Kaplan was also tasked with reorganizing the network and its 250 employees. In October of 2012, Kaplan was contracted by the Madison Square Garden Company and Fuse Network to create and executive produce a 30-minute daily news program solely about music. The program is called <strong>Fuse News</strong>, and deals with daily breaking news in the music business.</p>
            </div>
         </div>
-        <div class="small-4 columns">
+        <div class="large-4 small-12 columns">
           <img src="img/fuse-bio.png">
         </div>
       </div>
       <div class="row">
-        <div class="small-4 columns">
+        <div class="large-4 small-12 columns">
           <div class="video-center">
             <iframe width="266.6666" height="200" src="//www.youtube.com/embed/-ZVh_u5RyiU" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="small-6 columns">
+        <div class="large-6 small-8 columns">
           <div class="break-right">
             <p class="home-info pad-r">
             Prior, Kaplan was named <strong>Executive Producer of ABC NEWS’ THIS WEEK WITH CHRISTIANE AMANPOUR</strong> and put in charge of political coverage and 2012 Election Coverage and Specials in May of 2011, producing the Republican candidates' presidential debate. Kaplan was named <strong>Executive Producer of The CBS EVENING NEWS with Katie Couric</strong> in March of 2007. In revamping this evening newscast he produced several hours of special political and election coverage, including the <span class="katie-couric"><a href="https://www.youtube.com/watch?v=-ZVh_u5RyiU" target="_blank"> game-changing Katie Couric interviews with Sarah Palin</a></span> that was honored with a 2010 Columbia Du Pont award. 
           </p>
           </div>
         </div>
-        <div class="small-2 columns">
+        <div class="large-2 small-4 columns">
           <div id="about-abc">
             <h4>abc<br> &amp;<br> cbs
             </h4>
@@ -204,68 +203,68 @@
         </div>
       </div>
       <div class="row">
-      <div class="small-2 columns">
-        <div id="about-msnbc">
-          <h4 class="nbc-pad">msnbc<br> &amp; <br>nbc</h4>
+        <div class="large-2 small-4 columns">
+          <div id="about-msnbc">
+            <h4 class="nbc-pad">msnbc<br> &amp; <br>nbc</h4>
+          </div>
         </div>
-        </div>
-        <div class="small-10 columns">
+        <div class="large-10 small-8 columns">
           <div class="break-left">
             <p class="home-info pad-l">In February 2004, Mr. Kaplan was named <strong>PRESIDENT of MSNBC</strong>, NBC News’ 24-hour cable channel . During his tenure, ratings for virtually every hour of the program day rose by double-digit numbers: <strong>24% in daytime, 27% in primetime, and across 2005-2006 grew an amazing 67% in audience share</strong>. He also produced major news events including <strong>Election Night 2004 and A CONCERT FOR HURRICANE RELIEF</strong>, the latter being a one-hour musical event. Musical guests included Harry Connick, Jr., Faith Hill, Tim McGraw and Aaron Neville who entertained as the broadcast was simulcast across 7 networks. Hosted by Matt Lauer and celebrities including Hillary Swank, John Goodman and Richard Gere, the program raised more than $50 million for victims of Hurricane Katrina. </p>
           </div>
         </div>
-        </div>
+      </div>
       <div class="row">
-        <div class="small-10 columns">
+        <div class="large-10 small-8 columns">
           <div class="break-right">
             <p class="home-info pad-r">As <strong>PRESIDENT of CNN-U.S.from 1997-2000</strong>, Kaplan was responsible for all news and programming at the flagship network of the CNN News Group. He further enhanced the network’s reputation as the world’s television news leader by instituting a highly-rated new class of instant news specials, revamping the network’s programming lineup with a new program schedule and anchor teams, and increasing the number of hours of hard news programming during the weekends.</p>
           </div>
         </div>
-        <div class="small-2 columns">
+        <div class="large-2 small-4 columns">
           <div id="about-cnn">
             <h4>cnn - u.s.</h4>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="small-2 columns">
+        <div class="large-2 small-4 columns">
           <div id="about-world">
             <h6>world news tonight with peter jennings</h6>
           </div>
         </div>
-        <div class="small-6 columns">
+        <div class="large-6 small-8 columns">
           <div class="break-left">
             <p class="home-info pad-l">In January 1994, Kaplan became <strong>EXECUTIVE PRODUCER of WORLD NEWS TONIGHT with PETER JENNINGS</strong> and was responsible for the direction and overall editorial content of the most watched evening news program in the nation.  Under Kaplan’s direction in 1994, World News Tonight with Peter Jennings broadcast live from the beaches of Normandy for the 50th anniversary of D-Day and in a series of special news broadcasts from the Middle East, produced the first live program from the Gaza Strip. Prior to that <strong>Kaplan was the creator and EXECUTIVE PRODUCER of the ABC News magazine, PRIMETIME LIVE</strong>, from 1989 to 1994. Under his direction, the program quickly became one of the leading news magazines on television, regularly finishing in the top ten of all programs in his final three years there. </p>
            </div>
         </div>
-        <div class="small-4 columns">
+        <div class="large-4 small-12 columns">
           <img src="img/wntpjphoto.png">
         </div>
       </div>
       <div class="row">
-        <div class="small-4 columns">
+        <div class="large-4 small-12 columns">
           <div class="video-center-abc">
             <iframe src="//player.vimeo.com/video/73890733" width="266.6666" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
         </div>
-        <div class="small-6 columns">
+        <div class="large-6 small-8 columns">
           <div class="break-right">
             <p class="home-info pad-r">Kaplan was <strong>EXECUTIVE PRODUCER OF ABC NEWS NIGHTLINE</strong> from 1984 to 1989, where he guided the late-night news program through a period of extraordinary innovation and exclusive interviews. In 1988, Kaplan was <span class="katie-couric"><a href="http://vimeo.com/73890733" target="_blank">Executive Producer of Nightline in the Holy Land</a></span>, a critically acclaimed week-long series examining Arab-Israeli conflicts. At that time he was also responsible for an unprecedented four-hour Nightline National Town Meeting on AIDS, <strong>the most comprehensive coverage of the epidemic ever shown on network television</strong>.</p>
           </div>
         </div>
-        <div class="small-2 columns">
+        <div class="large-2 small-4 columns">
           <div id="nightline">
             <h4> abc news nightline</h4>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="small-2 columns">
+        <div class="large-2 small-4 columns">
           <h4>furthering education</h4>
         </div>
-        <div class="small-10 columns">
+        <div class="large-10 small-8 columns">
           <div class="break-left">
-            <p class="home-info pad-l">Complementing his distinguished broadcast journalism career, Kaplan has devoted a great deal of his time to education, lecturing on the topics of journalism, advertising and politics in media at universities across the country including <strong>Duke University, Columbia University, Cornell, Wellesley, Boston College, Columbia College, USC, Berkley, and his alma mater University of Illinois at Urbana-Champaign</strong>.</p>
+            <p class="home-info pad-l">Complementing his distinguished broadcast journalism career, Kaplan has devoted a great deal of his time to education, lecturing on the topics of journalism, advertising and politics in media at universities across the country including <strong>Duke University, Columbia University, Cornell, Wellesley, Boston College, Columbia College, USC, Berkley, University of Pennsylvania and his alma mater University of Illinois at Urbana-Champaign</strong>.</p>
           </div>
         </div>
       </div>
@@ -273,7 +272,7 @@
   </div>
     <footer class="site-footer">
       <div class="row">
-        <div class="small-5 columns">
+        <div class="large-5 small-8 columns">
           <div class="footer-nav-wrap">
             <ul class="footer-nav">
               <li><a href="index.html">Home</a></li>
@@ -283,20 +282,19 @@
             </ul>
           </div>
         </div>
-        <div class="small-7 columns">
+        <div class="large-7 small-4 columns">
           <p class="footer-text">
             Website by <a href="http://michellewegenstein.com" target="_blank">Michelle Wegenstein</a>
           </p>
         </div>
       </div>  
     </footer>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>
     document.write('<script src=js/vendor/'
       + ('__proto__' in {} ? 'zepto' : 'jquery')
       + '.js><\/script>');
   </script>
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/foundation/foundation.js"></script>
   <script src="js/foundation/foundation.orbit.js"></script>
   <script>
