--- a/app/clients.html
+++ b/app/clients.html
@@ -77,7 +77,7 @@
     <footer class="site-footer">
       <div class="footer-border">
       <div class="row">
-        <div class="small-5 columns">
+        <div class="large-5 small-8 columns">
           <div class="footer-nav-wrap">
             <ul class="footer-nav">
               <li><a href="index.html">Home</a></li>
@@ -87,7 +87,7 @@
             </ul>
           </div>
         </div>
-        <div class="small-7 columns">
+        <div class="large-7 small-4 columns">
           <p class="footer-text">
             Website by <a href="http://michellewegenstein.com" target="_blank">Michelle Wegenstein</a>
           </p>
